# Resume_Helper

./: .gitignore  CHANGELOG.md  LICENSE  LLAMA_CPP_LM_STUDIO_TESTING.md  PR_DRAFT_v3.0_UI_Migration.md  README.html  README.md  USAGE_GUIDE.md  install_and_run.py  install_run_windows.bat  old_working_provider.txt  pyproject.toml  requirements.txt  start_react_ui.bat
.github/workflows/: code-quality.yml  frontend-ci.yml
Resume_Helper/: .env.example  LICENSE  README.md  app.py  base_ai_provider.py  cover_letter_generator.py  resume_generator.py  sample_resume.json  unified_ai_features.py
Resume_Helper/Resume_Templates/: classic_cover_letter.html  classic_template.html
Resume_Helper/infrastructure/: __init__.py
Resume_Helper/presentation/: __init__.py
Resume_Helper/tabs/: __init__.py  ai_resume_helper_tab.py  certifications_tab.py  educations_tab.py  experiences_tab.py  generate_resume_tab.py  personal_info_tab.py  projects_tab.py  skills_tab.py
Resume_Helper/utils/: file_utils.py  privacy_manager.py
Resume_Helper/workflows/: __init__.py  application_workflows.py  resume_workflows.py
assets/: mindmap.mmd  privacy-workflow.mmd
backend/: .dockerignore  Dockerfile  ecs-task-definition.json  pytest.ini
docs/: API_KEYS.md
frontend/: .vercelignore  components.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  test-setup.ts  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
test_setup/: README.md  install_llamacpp.bat  install_lmstudio.bat  release_info.json  setup_local_ai.bat
(+164 files in other folders)
