[project]
name = "resume-helper"
version = "3.1.0"
description = "AI-powered resume builder with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Business Source License 1.1" }
authors = [
    { name = "Resume Helper Team" }
]
dependencies = [
    # Template Engine
    "jinja2>=3.1.3",
    
    # PDF Generation
    "playwright>=1.53.0",
    "pypdf>=5.6.0",
    
    # Document Processing
    "python-docx>=1.1.0",
    
    # HTTP Requests
    "requests>=2.31.0",
    
    # Environment Variables
    "python-dotenv>=1.0.0",
    
    # System Information
    "psutil>=5.9.8",
    
    # Markdown Processing
    "markdown2>=2.5.3",
    
    # Unified LLM Interface
    "litellm>=1.40.0",
    
    # File Type Detection
    "python-magic>=0.4.27",
    
    # Database ORM
    "sqlalchemy>=2.0.0",
    
    # FastAPI Backend
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = []
 
